// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useSignals method. Functional components should properly subscribe to signals and update ui. 1`] = `
<SubscribedFunctionalComponent
  onInternalSignal={[Function]}
>
  <div>
    initial
  </div>
</SubscribedFunctionalComponent>
`;

exports[`useSignals method. Functional components should properly subscribe to signals and update ui. 2`] = `
<SubscribedFunctionalComponent
  onInternalSignal={[Function]}
>
  <div>
    newValue
  </div>
</SubscribedFunctionalComponent>
`;
